--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -9,16 +9,10 @@
   </div>
 
   <div class="col-lg-6">
-    <h4>Help</h4>
+    <h4>Pairings</h4>
     <ul>
       <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
+        Dennis - Zach
       </li>
     </ul>
   </div>
